// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedHeader renders the ConnectedHeader component 1`] = `
Object {
  "children": Array [
    <Col
      className="bg-top-nav"
      md={2}
      sm={3}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <nav
        className="navbar navbar-expand-md navbar-light"
      >
        <Link
          className="navbar-brand"
          to="/"
        >
          <img
            alt="OpenSRP"
            src="logo.png"
          />
        </Link>
      </nav>
    </Col>,
    <Col
      md={8}
      sm={5}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    />,
    <Col
      className="bg-top-nav"
      md={2}
      sm={4}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Nav
        className="navbar navbar-expand-md center-account-text"
        tag="ul"
        vertical={false}
      >
        <NavLink
          activeClassName="active"
          className="nav-link account-text"
          to="/login"
        >
          Login
        </NavLink>
      </Nav>
    </Col>,
  ],
  "className": "w-100 bg-navbar",
  "expand": "sm",
  "fixed": "top",
  "tag": "nav",
}
`;

exports[`components/ConnectedHeader renders the ConnectedHeader when logged in 1`] = `
Object {
  "children": Array [
    <Col
      className="bg-top-nav"
      md={2}
      sm={3}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <nav
        className="navbar navbar-expand-md navbar-light"
      >
        <Link
          className="navbar-brand"
          to="/"
        >
          <img
            alt="OpenSRP"
            src="logo.png"
          />
        </Link>
      </nav>
    </Col>,
    <Col
      md={8}
      sm={5}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    />,
    <Col
      className="bg-top-nav"
      md={2}
      sm={4}
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Nav
        className="navbar navbar-expand-md center-account-text"
        tag="ul"
        vertical={false}
      >
        <UncontrolledDropdown
          inNavbar={true}
          nav={true}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={true}
            className="account-text"
            color="secondary"
            nav={true}
          >
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Array [
                  "far",
                  "user",
                ]
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
             
            RobertBaratheon
          </DropdownToggle>
          <DropdownMenu
            flip={true}
            right={true}
            tag="div"
          >
            <DropdownItem
              tag="button"
              toggle={true}
            >
              <NavLink
                activeClassName="active"
                className="nav-link bg-dropdown-text"
                to="/logout"
              >
                Sign Out
              </NavLink>
            </DropdownItem>
          </DropdownMenu>
        </UncontrolledDropdown>
      </Nav>
    </Col>,
  ],
  "className": "w-100 bg-navbar",
  "expand": "sm",
  "fixed": "top",
  "tag": "nav",
}
`;
